--- a/data_structures.ipynb
+++ b/data_structures.ipynb
@@ -475,10 +475,350 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 98, 10, 6, 4, 14, 23, 86, 67, 45, 12]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [12,45,67,86,23,14,4,6,10,98,1]\n",
+    "# reverse\n",
+    "numbers[::-1] # gives the result but doesn't change the original list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numbers.reverse() # changes the original list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 98, 10, 6, 4, 14, 23, 86, 67, 45, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 6, 10, 12, 14, 23, 45, 67, 86, 98]\n",
+      "[98, 86, 67, 45, 23, 14, 12, 10, 6, 4, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers.sort() # ascending order, changes the original list\n",
+    "print(numbers)\n",
+    "numbers.sort(reverse=True) # descending order\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 12], [2, 5], [4, 15], [5, 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x= [[1,12],[2,5],[5,10],[4,15]]\n",
+    "x.sort() # sort by first el of each sublist\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 5], [5, 10], [1, 12], [4, 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.sort(key= lambda e: e[1])\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 5], [1, 12], [5, 10], [4, 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.sort(key= lambda i: sum(i))\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Bob', 19), ('Alice', 25), ('Alex', 35)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "users = [('Alice',25),('Bob',19),('Alex',35)]\n",
+    "users.sort(key= lambda e: e[1])\n",
+    "print(users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['laptop', 60000, 1], ['mobile', 25000, 2], ['headphones', 1500, 2], ['watch', 3000, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cart = [['mobile', 25000, 2],\n",
+    "        ['laptop',60000, 1],\n",
+    "        ['watch',3000, 3],\n",
+    "        ['headphones', 1500, 2]]\n",
+    "cart.sort(key= lambda i: i[-1]) \n",
+    "print(cart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 occurs: 2\n",
+      "5 occurs: 2\n",
+      "10 occurs: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,23,1,2,4,4,5,5,6,7]\n",
+    "print(\"1 occurs:\",a.count(1))\n",
+    "print(\"5 occurs:\",a.count(5))\n",
+    "print(\"10 occurs:\",a.count(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers.index(12) # gives the index of 12 (first occurence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5, 6, 20]\n",
+      "[1, 2, 3, 4, 5, 10]\n",
+      "[1, 2, 3, 4, 5, 6, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "b = a.copy() # shallow copy (new list with same element)\n",
+    "c = a # reference copy (both a and c refer to same list)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "a.append(6)\n",
+    "b.append(10)\n",
+    "c.append(20)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## comprehension\n",
+    "\n",
+    "syntax: new_list = [operation loop(condition)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 4, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,3,2,5]\n",
+    "x2 = [i**2 for i in x]\n",
+    "print(x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 8, 27, 64, 125]\n",
+      "[-4, -3, -2, -1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "a3 = [i**3 for i in a]\n",
+    "print(a) \n",
+    "print(a3)\n",
+    "a5 = [i-5 for i in a]\n",
+    "print(a5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# rookie way\n",
+    "aodd2 = []\n",
+    "for i in a:\n",
+    "    if i%2 !=0:\n",
+    "        aodd2.append(i**2)\n",
+    "# pythonic way\n",
+    "aeven2 = [i**2 for i in a if i%2==0]\n",
+    "print(aeven2)\n",
+    "# map and filter\n",
+    "# aodd2 = list(map(lambda i: i**2, filter(lambda i: i%2!=0,a))) # not good\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AS']\n",
+      "['AS', 'BB']\n",
+      "['AS', 'BB', 'CG']\n",
+      "['AS', 'BB', 'CG', 'DW']\n",
+      "['AS', 'BB', 'CG', 'DW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Alice Smith','Bob Brown','Charlie Green','David White']\n",
+    "initials = []\n",
+    "for i in names:\n",
+    "    initials.append(f\"{i.split()[0][0]}{i.split()[1][0]}\")\n",
+    "    print(initials)\n",
+    "\n",
+    "# comprehension\n",
+    "initials = [f\"{i.split()[0][0]}{i.split()[1][0]}\" for i in names]\n",
+    "print(initials)"
+   ]
   },
   {
    "cell_type": "code",
