--- a/data_structures.ipynb
+++ b/data_structures.ipynb
@@ -821,6 +821,637 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tuples\n",
+    "- creating\n",
+    "- indexing and slicing\n",
+    "- methods\n",
+    "- packing and unpacking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "() (1,) (1, 2, 3, 4, 5)\n",
+      "((1, 2), (3, 4), (5, 6))\n",
+      "('a', 1, 'b', 2, 'c', 3)\n",
+      "(1, 1, 1, 1, 1)\n",
+      "('s', 't', 'o', 'r', 'm', 'l', 'i', 'g', 'h', 't', ' ', 'a', 'r', 'c', 'h', 'i', 'v', 'e', 's')\n",
+      "(0, 1, 2, 3, 4, 5, 6, 7, 8, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = () # empty tuple\n",
+    "y = (1,) # single element tuple\n",
+    "z = (1,2,3,4,5) # multiple element tuple\n",
+    "a = ((1,2),(3,4),(5,6)) # nested tuple\n",
+    "b = ('a',1,'b',2,'c',3) # mixed tuple\n",
+    "c = (1,) * 5 # duplicated tuple\n",
+    "d = tuple('stormlight archives') # tuple from string\n",
+    "e = tuple(range(10)) # sequence to tuple\n",
+    "print(x,y,z)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(d)\n",
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1, 2, 3, 4, 5, 6, 7, 8, 9)\n",
+      "(4, 3, 2, 1, 0)\n",
+      "(4, 5, 6, 7, 8, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(e)\n",
+    "print(e[4::-1]) # -1 makes this go in reverse order\n",
+    "print(e[4:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# index (search) and count methods\n",
+    "fruits = ('apple','banana','cherry','apple','cherry')\n",
+    "print(fruits.index('apple'))\n",
+    "print(fruits.index('apple',1)) # search starts from index 1\n",
+    "print(fruits.count('apple')) # counts the occurences of apple\n",
+    "print(fruits.count('banana')) # counts the occurences of banana\n",
+    "print(fruits.count('mango')) # counts the occurences of mango"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1,2,3 # tuple packing\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stats(*data):\n",
+    "    total = sum(data)\n",
+    "    avg = total/ len(data)\n",
+    "    return total, round(avg,2) # round method to round off to 2 decimal places"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(203, 33.83)\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = stats(12,35,29,59,23,45)\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b = 12, 45 # tuple unpacking\n",
+    "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unpacking error\n",
+    "\n",
+    "# a,b,c = 12,45 # error\n",
+    "# a,b = 12,45,78 # error\n",
+    "# total , mean, max = stats(12,35,29,59,23,45) # error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "[3, 4, 5, 5, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,*c = (1,2,3,4,5,5,5) # c is a list\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[2, 3, 4, 5, 5]\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,*b,c = (1,2,3,4,5,5,5) # b is a list\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "*a,b,c = (1,2,3,4,5,5,5) # a is a list\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# set\n",
+    "- creating\n",
+    "- methods\n",
+    "- set operations\n",
+    "  - union\n",
+    "  - intersection\n",
+    "  - difference\n",
+    "  - symmetric difference\n",
+    "  - issubset\n",
+    "  - issuperset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "{1, 2, 3, 4, 5}\n",
+      "{1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = set() # empty set\n",
+    "y = {1,2,3,4,5} # set with elements\n",
+    "z= {1,2,2,3,3,4,4,5,5,5} # set removes duplicates\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'l', 'o', 'e', 'h'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = set('hello') # set from string\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{65, 5, 6, 12, 45, 23}\n",
+      "0 1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
+   "source": [
+    "b = set([23,5,45,65,45,12,45,6])\n",
+    "print(b)\n",
+    "c = set(range(10))\n",
+    "for i in c:\n",
+    "    print(i, end =' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 12, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = set() # empty set\n",
+    "data.add(12) # add element\n",
+    "data.add(2) # add element\n",
+    "data.add(12) # add element\n",
+    "data.add(5) # add element\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 67, 5, 12, 45, 23, 89}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.update([23,45,67,89]) # add multiple elements\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 67, 5, 12, 89}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.discard(23) # remove element\n",
+    "data.remove(45) # remove element (error if not present)\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{67, 5, 12, 89}\n",
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.pop() # remove random element\n",
+    "print(data)\n",
+    "data.clear() # remove all elements\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8}\n",
+      "{1, 2, 3, 4, 5, 6, 7, 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# operations\n",
+    "a = {1,2,3,4,5}\n",
+    "b = {4,5,6,7,8}\n",
+    "c = {11,12,13}\n",
+    "print(a.union(b))\n",
+    "print(a | b) # | is a union operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a.intersection(b))\n",
+    "print(a & b) # & is a union operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3}\n",
+      "{1, 2, 3}\n",
+      "{8, 6, 7}\n",
+      "{8, 6, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.difference(b))\n",
+    "print(a - b) # - is a union operator\n",
+    "print(b - a)\n",
+    "print(b.difference(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 6, 7, 8}\n",
+      "{1, 2, 3, 6, 7, 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.symmetric_difference(b))\n",
+    "print(a ^ b) # ^ is symmetric difference operator "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 11, 12, 13}\n",
+      "set()\n",
+      "{1, 2, 3, 4, 5}\n",
+      "{1, 2, 3, 4, 5, 11, 12, 13}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a|c)\n",
+    "print(a&c)\n",
+    "print(a-c)\n",
+    "print(a^c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {1,2,3}\n",
+    "print(a.issuperset(b))\n",
+    "print(a.issuperset(c))\n",
+    "print(a.issuperset(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d.issubset(a))\n",
+    "print(d.issubset(b))\n",
+    "print(d.issubset(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.isdisjoint(b))\n",
+    "print(a.isdisjoint(c))\n",
+    "print(a.isdisjoint(d))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "{1, 2, 3, 4, 5}\n",
+      "(1, 2, 3, 4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "a_set = set(a)\n",
+    "a_tuple = tuple(a)\n",
+    "print(a)\n",
+    "print(a_set)\n",
+    "print(a_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_list = list(a_set)\n",
+    "print(a_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 3, 4, 5, 5, 6, 5, 1, 1, 1, 1, 1]\n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,2,3,3,4,5,5,6,5,1,1,1,1,1]\n",
+    "print(x)\n",
+    "x = list(set(x)) # set -> remove duplicates -> list -> x\n",
+    "print(x)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
