--- a/practice.ipynb
+++ b/practice.ipynb
@@ -898,11 +898,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "65\n",
+      "90\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5\n",
+    "list1 = [12,23,34,43,32,21,56,65,90,10]\n",
+    "list2 = [10,45,65,78,90,99,37,83,92,21]\n",
+    "for el in list1:\n",
+    "    for num in list2:\n",
+    "        if el == num:\n",
+    "            print(el)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['file1.img', 'file2.img', 'file3.img', 'file5.jpg']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6\n",
+    "filename = ['file1.img', 'file2.img', 'file3.img', 'file4.jpg', 'file5.jpg', 'file6.jpg']\n",
+    "for element in filename:\n",
+    "    if element.endswith('.jpg'):\n",
+    "        filename.remove(element)\n",
+    "print(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#5\n"
+    "#7\n",
+    "nested_list = [[1,2,3],[4,5,6],[7,8,9]]\n"
    ]
   }
  ],
